# ros2

./: .gitignore
.github/workflows/: codeql-analysis.yml
src/my_robot_bringup/: CMakeLists.txt  package.xml
src/my_robot_bringup/launch/: number_app.launch.py
src/my_robot_interfaces/: CMakeLists.txt  package.xml
src/ros2_app_cpp/: CMakeLists.txt  package.xml
src/ros2_app_cpp/src/: number_counter.cpp  number_publisher.cpp
src/ros2_app_py/: package.xml  setup.cfg  setup.py
src/ros2_app_py/ros2_app_py/: number_counter.py  number_publisher.py
test_ros1_ws/devel/: .catkin  local_setup.sh
test_ros1_ws/devel/include/my_msgs/: CustomString.h
test_ros1_ws/devel/lib/pkgconfig/: my_msgs.pc
test_ros1_ws/devel/share/my_msgs/cmake/: my_msgs-msg-paths.cmake  my_msgsConfig.cmake
test_ros1_ws/devel/share/roseus/ros/my_msgs/: manifest.l
test_ros1_ws/src/my_msgs/: CMakeLists.txt  package.xml
test_ros2_ws/install/: local_setup.sh  setup.sh
test_ros2_ws/install/my_msgs/include/my_msgs/msg/: rosidl_generator_c__visibility_control.h  rosidl_typesupport_fastrtps_c__visibility_control.h  rosidl_typesupport_fastrtps_cpp__visibility_control.h
test_ros2_ws/install/my_msgs/share/my_msgs/: local_setup.dsv  my_mapping_rules.yaml  package.bash  package.dsv  package.ps1  package.sh  package.zsh
test_ros2_ws/install/my_msgs/share/my_msgs/cmake/: ament_cmake_export_include_directories-extras.cmake  ament_cmake_export_targets-extras.cmake  (+5 more)
test_ros2_ws/log/: latest_build
test_ros2_ws/src/my_msgs/: CMakeLists.txt  package.xml
(+16 files in other folders)
